--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head><body><header>
     <div class="logo h-card">
         <a class="u-url" href="//localhost:1313/">
-            <img alt="Site Logo" class="site-logo u-photo" src="/images/logo.png"/>
+            <img alt="Site Logo" class="site-logo u-photo" src="/images/hogwartslogo.png"/>
         </a>
     </div>
     <nav class="menu">
@@ -50,7 +50,7 @@
 
 
 
-<img src="/images/3.jpg" alt="About Dictionary">
+<img src="/images/8.jpg" alt="About Dictionary">
 
                 
                 <div class="text">
@@ -71,7 +71,7 @@
 
 
 
-<img src="/images/5.jpg" alt="Exploring the Wizarding World">
+<img src="/images/3.jpg" alt="Exploring the Wizarding World">
 
                 
                 <div class="text">
@@ -101,7 +101,7 @@
     </div>
     <div class="logo h-card">
         <a class="u-url" href="//localhost:1313/">
-            <img alt="Site Logo" class="site-logo u-photo" src="/images/logo.png"/>
+            <img alt="Site Logo" class="site-logo u-photo" src="/images/hogwartslogo.png"/>
         </a>
         <p>© 2025
             HDictionary</p>
