--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
 </head><body><header>
     <div class="logo h-card">
         <a class="u-url" href="//localhost:1313/">
-            <img alt="Site Logo" class="site-logo u-photo" src="/images/logo.png"/>
+            <img alt="Site Logo" class="site-logo u-photo" src="/images/hogwartslogo.png"/>
         </a>
     </div>
     <nav class="menu">
@@ -39,7 +39,7 @@
     </div>
     <div class="logo h-card">
         <a class="u-url" href="//localhost:1313/">
-            <img alt="Site Logo" class="site-logo u-photo" src="/images/logo.png"/>
+            <img alt="Site Logo" class="site-logo u-photo" src="/images/hogwartslogo.png"/>
         </a>
         <p>© 2025
             HDictionary</p>
